v1.2.4 bigger gap fixed min-height for horizontal images make image-overlay smaller on smaller screens

--- a/public/index.css
+++ b/public/index.css
@@ -68,7 +68,7 @@ images {
     grid-template-columns: repeat( auto-fill, 300px );
     margin-inline: auto;
     margin-block: 1rem;
-    gap: 0.5rem;
+    gap: 1rem;
     justify-content: center;
     justify-items: center;
 }
@@ -76,14 +76,11 @@ images {
 .vertical, .vertical > img{
     grid-row: span 2;
     height: 100%;
-    min-height: 300px;
-    min-width: 300px;
 }
 
 .horizontal, .horizontal > img{
     height: 100%;
-    min-height: 300px;
-    min-width: 300px;
+    min-height: 230px;
 }
 
 .square, .square > img{
@@ -293,14 +290,11 @@ div.img {
         height: 175px;
         width: 175px;
     }
-    .vertical, .vertical > img{
-        min-height: 175px;
-        min-width: 175px;
-    }
     
     .horizontal, .horizontal > img{
-        min-height: 175px;
-        min-width: 175px;
+        min-height: 137px;
     }
-
+    .img:hover  > .image-overlay{
+        scale: .75;
+    }
 }
